--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@
 *.iml
 out
 gen
+/.apt_generated/
+/.classpath
+/.factorypath
+/.project
+/.settings/
+/.springBeans
+/target/
+/.gitignore
+/user-profile-analysis.iml
+/.idea
+/README.md
+.DS_Store
